Wed Oct 22 23:20:04 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilechooser.[ch] gtk/gtkfilefilter.[ch] 
	gtk/gtkfilechooserwidget.[ch] gtk/gtkfilechooserdialog.[ch]:
	gtk/gtkfilechooserutils.c gtk/gtkfilechooserprivate.[ch]:
	Basic framework for the new file selector widget.

	* gtk/gtkfilechooserdefault.[ch] gtk/gtkcellrenderersep.[ch] 
	gtk/gtkfilechooserentry.[ch] gtk/gtkfilesystemmodel.[ch]:
	Initial implementation of the GtkFileChooser user interface.

	* gtk/gtkfilesystemunix.[ch]: GtkFileSystem implementation
	for Unix files.

	* configure.in gtk/Makefile.am gtk/xdgmime: Build code
	for freedesktop.org MIME system on Unix.

	* tests/testfilechooser.c: Test program for GtkFileChooser

	* tests/prop-editor.c: Add support for properties on interfaces.

Tue Oct 21 16:12:51 2003  Owen Taylor  <otaylor@redhat.com>

	* demos/gtk-demo/menus.c (do_menus): Fix some unused
	variables.

	* gtk/gtkmain.c (_gtk_get_lc_ctype): Fix an unused
	variable warning.

Thu Oct 23 00:04:50 2003  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Partial update for 2.3.0.

Tue Oct 21 22:07:12 2003  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_real_move_cursor): set
	ctrl_pressed and shift_pressed according to the current event
	state (if there is one). (Fixes #125063, reported by Sebastien Bacher).

Mon Oct 20 23:24:27 2003  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtkentry.c (gtk_entry_key_press): remove the completion
	timeout when the user pressed on Enter/ESC. Fixes the bug where the
	completion popup popped up after the user pressed on Enter (which is
	just weird). Reported by the Epiphany people (all of them).

Mon Oct 20 20:27:22 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	Add support for OS X like sliding of toolbar items during drag and
	drop, (#110919, Dave Bordoley)

	Make dnd highlighting the responsibility of the
	application. (Fixes #116298, Owen Taylor)

	* gtk/gtktoolbar.h: Add prototypes for new API.
	
	* gtk/gtktoolbar.c